# KALE-sc

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  cheatsheet
bun_tests/: .env.example  bun.lockb  calc_emissions_rate.ts  index.ts  package.json
bun_tests/build_leaderboard/: README.md  fetch_c_balances.ts  fetch_g_balances.ts  fetch_transactions_deep.ts  run_full_analysis.sh  test_rate_limits.ts
bun_tests/controlled_burn/: .env.example  controlled_burn.ts  setup.sh
bun_tests/fillup/: FILLUP_README.md  fillup.ts  fillup_example.ts
contracts/kale-sc/src/: contract_farm.rs  contract_homestead.rs  errors.rs  lib.rs  storage.rs
contracts/kale-sc/src/tests/: mod.rs  normalize.rs  test.rs  utils.rs
ext/soroban-fixed-point-math/: Cargo.toml  README.md
