[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "23.0.0-rc.2.1"
soroban-fixed-point-math = { path = "./ext/soroban-fixed-point-math" }
tiny-keccak = "2.0.2"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
stellar-strkey = "0.0.13"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
